myteo/test/analyze/type_check/this/field_access.exp
Error: Expected type `Unit` but found `Int`
test/analyze/type_check/this/field_access.myte:11:5-13
 11 |     (this.foo: Unit);
    |      ^^^^^^^^

Error: Expected type `Unit` but found `String`
test/analyze/type_check/this/field_access.myte:12:5-13
 12 |     (this.bar: Unit);
    |      ^^^^^^^^

Error: Expected type `Unit` but found `T`
test/analyze/type_check/this/field_access.myte:21:5-13
 21 |     (this.foo: Unit);
    |      ^^^^^^^^

Error: Expected type `Unit` but found `(T, Int)`
test/analyze/type_check/this/field_access.myte:22:5-13
 22 |     (this.bar: Unit);
    |      ^^^^^^^^